# agentburn

./: README.md  pyproject.toml  server.json
.github/ISSUE_TEMPLATE/: burn-index.md
.github/workflows/: burn-index.yml  publish-mcp.yml  publish.yml
agentburn/: __init__.py  analyze.py  baseline.py  behavior.py  benchmarks.py  burnindex.py  cli.py  doctor.py  drift.py  fix.py  llm.py  mcp.py  model.py  prices.py  recommend.py  report.py  share.py
agentburn/adapters/: __init__.py  claude_code.py  hermes.py  openclaw.py
data/: burn-index.json
docs/: index.html
skill/: README.md
skill/agentburn/: SKILL.md
tests/: selftest.py
tools/: aggregate_burn_index.py  gen_demo.py  gen_demo_gif.py
